<resources>
    <string name="add_species">Specie</string>
    <string name="add_height">Height     (CM)</string>
    <string name="target_name">Pot\'s Height</string>
    <string name="add_pic">Please select a photo of the plant pot (Click to Upload)</string>
    <string name="add_ADD">Add</string>
    <string name="confirm">Confirm</string>
    <string name="video">Video</string>
    <string name="tutorial">"Tutorial "</string>
    <string name="start">Start</string>
    <string name="Real_height">Flower\'s height</string>
    <string name="Pot_height">pot height</string>
    <string name="draw_redraw">Redraw</string>
    <string name="draw_save">Save</string>
    <string name="enter_text">Enter pot height     (CM)</string>
    <string name="enter_input">Pot Height</string>
    <string name="enter_done">Done</string>
    <string name="show_text">Output as</string>
    <string name="update_draw">Draw</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="dialog">Privacy Policy Authorization</string>
    <string name="agree">Agree</string>
    <string name="contacts_title">Contact Us</string>
    <string name="text_email">E-mail</string>
    <string name="text_web">Website</string>
    <string name="text_facebook">Facebook</string>
    <string name="disagree">Disagree</string>
    <string name="no_data">No Data</string>
    <string name="lange">Language:English</string>
    <string name="app_name">Green Growth Tracker</string>
    <string name="privacy_policy_textView">Privacy Policy</string>
    <string name="archive">Archive</string>
    <string name="add_archive">Add New Plant</string>
    <string name="AboutUs">About Us</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_text1">APD SKEG Pte Ltd built the APD Plant Growth App app as a commercial app. This SOFTWARE is provided by APD SKEG Pte Ltd and is intended for use as is.</string>
    <string name="privacy_text2">Please note that the App does not collect nor store any information. The access to the camera is purely for viewing purposes. No pictures or video are taken by the app at any given time.</string>
    <string name="privacy_text3">This page is used to inform users regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Software.</string>
    <string name="privacy_text4">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at APD Plant Growth App, unless otherwise defined in this Privacy Policy.</string>
    <string name="privacy_text5">Information Collection and Use</string>
    <string name="privacy_text6">The app makes use of the Google Play Store and may collect information used to identify you.</string>
    <string name="privacy_text7">About the privacy of the children</string>
    <string name="privacy_text8">This software is not intended for anyone under the age of 13. We do not knowingly collect personally identifiable information about anyone. If we become aware that such data has been collected, we will immediately remove it from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we can take the necessary action.</string>
    <string name="switch_language_text">CN/EN</string>
    <string name="privacy_text9">Changes to this Privacy Policy</string>
    <string name="privacy_text10">We may update our privacy policy from time to time. Therefore, it is recommended that you check this page periodically for any changes. If there are any changes, we will publish a new privacy policy on this page to inform you. These changes take effect as soon as they are posted to this page.</string>
    <string name="privacy_text11">Links to other sites</string>
    <string name="privacy_text12">This software may contain links to other websites. If you click on a third party link, you will be directed to that site. Please note that these external sites are not operated by us. Therefore, I strongly encourage you to check the privacy policies of these sites. I have no control over, and accept no responsibility for, the content, privacy policies or practices of any third party website or software.</string>
    <string name="privacy_text13">contact us</string>
    <string name="privacy_text14">If you have any questions or suggestions regarding our privacy policy, please contact us by email. Our email address is zhup@kean.edu.</string>
    <string name="intro_description1">Add your plants through this activity</string>
    <string name="intro_description2">If you doubt the results, you can calculate the height of your spending using another method, which is the screen after clicking on the archive you suspect.</string>
    <string name="intro_description3">This is an interface in recalculation that requires you to enter the height of your pot</string>
    <string name="add_name">Name</string>
    <string name="Confirm" translatable="false">Confirm</string>
    <string name="Confirm_not" translatable="false">Not Confirm</string>
    <string name="dialog_message" translatable="false">Are you sure you picked the right box?</string>

</resources>


