<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:percent="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyFragment">

    <ScrollView
        android:id="@+id/privacy_hh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/privacy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                percent:layout_heightPercent="10%"
                android:text="@string/privacy_title"
                percent:layout_widthPercent="90%"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/privacy_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_title"
                android:text="@string/privacy_text1"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                percent:layout_heightPercent="10%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text1"
                android:text="@string/privacy_text2"
                android:textSize="20sp"
                android:textColor="@color/teal_200"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                percent:layout_heightPercent="10%"
                percent:layout_widthPercent="90%" />

            <TextView
                android:id="@+id/privacy_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text2"
                android:layout_centerHorizontal="true"
                android:text="@string/privacy_text3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />

            <TextView
                android:id="@+id/privacy_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text3"
                android:layout_centerHorizontal="true"
                android:text="@string/privacy_text4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text4"
                android:text="@string/privacy_text5"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text5"
                android:text="@string/privacy_text6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text6"
                android:text="@string/privacy_text7"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text7"
                android:text="@string/privacy_text8"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text8"
                android:text="@string/privacy_text9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text9"
                android:text="@string/privacy_text10"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text10"
                android:text="@string/privacy_text11"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text11"
                android:text="@string/privacy_text12"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text12"
                android:text="@string/privacy_text13"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />
            <TextView
                android:id="@+id/privacy_text14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_text13"
                android:text="@string/privacy_text14"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                percent:layout_heightPercent="20%"
                percent:layout_widthPercent="90%" />

        </RelativeLayout>
    </ScrollView>

</androidx.percentlayout.widget.PercentRelativeLayout>


