<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterActivity">

    <TextView
        android:id="@+id/text_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_text"
        android:textSize="40sp"></TextView>
    <EditText
        android:id="@+id/input_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_enter"
        android:ems="10"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:hint="@string/enter_input"></EditText>

    <Button
        android:id="@+id/go_jisuan"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/enter_done"
        android:textSize="40sp"></Button>


</RelativeLayout>