<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

        <LinearLayout
            android:id="@+id/hhh"
            android:orientation="horizontal"
            android:layout_width="500sp"
            android:layout_height="50sp">

                <Button
                    android:id="@+id/video"
                    android:layout_height="50sp"
                    android:layout_width="100sp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/video"
                    />

                <TextView
                    android:id="@+id/text_introduce"
                    android:layout_width="180sp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/tutorial"
                    android:gravity="center"
                    android:background="@color/white"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/skip"
                    android:layout_height="50sp"
                    android:layout_width="80sp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/start"
                    />

        </LinearLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="395dp"
            android:layout_height="66dp"
            android:layout_above="@id/view_pager2"
            android:layout_below="@id/hhh"
            android:layout_marginBottom="-113dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager2"
            android:layout_width="385dp"
            android:layout_height="595dp"
            android:layout_marginTop="120sp" />
</RelativeLayout>



